adding weather plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,7 @@ set -g @plugin 'catppuccin/tmux#v2.1.0' # See https://github.com/catppuccin/tmux
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'xamut/tmux-weather'
 
 # catppuccin setup
 # Configure the catppuccin plugin
@@ -52,6 +53,9 @@ set -g @catppuccin_window_current_text " #{pane_current_path}"
 set -g @catppuccin_window_current_number "#I"
 set -g @catppuccin_window_number_position "left"
 
+set -g @tmux-weather-location "Portland"
+set -g @tmux-weather-units "u"
+
 # start window numbers from 1
 set -g base-index 1
 
@@ -61,7 +65,9 @@ set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+# replace session number with weather si
+#set -ag status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_weather}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
@@ -76,6 +82,7 @@ bind c new-window -c "#{pane_current_path}"
 run ~/.config/tmux/plugins/tmux/catppuccin.tmux
 run ~/.config/tmux/plugins/tmux-cpu/cpu.tmux
 run ~/.config/tmux/plugins/tmux-battery/battery.tmux
+run ~/.config/tmux/plugins/tmux-weather/tmux-weather.tmux
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
