add window renaming

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,6 +56,11 @@ set -g @catppuccin_window_number_position "left"
 set -g @tmux-weather-location "Portland"
 set -g @tmux-weather-units "u"
 
+# rename windows in ctrl+b w view
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format "#{b:pane_current_path}"
+
 # start window numbers from 1
 set -g base-index 1
 
