--- a/tmux.conf
+++ b/tmux.conf
@@ -61,6 +61,9 @@ set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format "#{b:pane_current_path}"
 
+# vi keys for searching scrollback with '?' '/' etc
+set-window-option -g mode-keys vi
+
 # start window numbers from 1
 set -g base-index 1
 
