--- a/tmux.conf
+++ b/tmux.conf
@@ -53,8 +53,9 @@ set -g @catppuccin_window_current_text " #{pane_current_path}"
 set -g @catppuccin_window_current_number "#I"
 set -g @catppuccin_window_number_position "left"
 
-set -g @tmux-weather-location "Portland"
+set -g @tmux-weather-location "Hillsboro"
 set -g @tmux-weather-units "u"
+# set -g @tmux-weather-interval 1
 
 # rename windows in ctrl+b w view
 set-option -g status-interval 5
