adding date time

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,11 @@ bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
 
+# open panes and windows in the same directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
@@ -30,13 +35,10 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#v2.1.0' # See https://github.com/catppuccin/tmux/tags for additional tags
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'xamut/tmux-weather'
+# Load catppuccin
+# run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
+run ~/.config/tmux/plugins/tmux/catppuccin.tmux
 
 # catppuccin setup
 # Configure the catppuccin plugin
@@ -53,9 +55,12 @@ set -g @catppuccin_window_current_text " #{pane_current_path}"
 set -g @catppuccin_window_current_number "#I"
 set -g @catppuccin_window_number_position "left"
 
-set -g @tmux-weather-location "Hillsboro"
+set -g @tmux-weather-location "Hillsboro" # can use zipcode here
 set -g @tmux-weather-units "u"
 # set -g @tmux-weather-interval 1
+
+# Status modules config
+set -g @catppuccin_date_time_text " %d-%m %H:%M"
 
 # rename windows in ctrl+b w view
 set-option -g status-interval 5
@@ -68,30 +73,23 @@ set-window-option -g mode-keys vi
 # start window numbers from 1
 set -g base-index 1
 
-# Make the status line pretty and add some modules
+# make the status line pretty and add some modules
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
-# replace session number with weather si
-#set -ag status-right "#{E:@catppuccin_status_session}"
 set -agF status-right "#{E:@catppuccin_status_weather}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
+set -agF status-right "#{E:@catppuccin_status_date_time}"
 
-# open panes and windows in the same directory
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-# Load catppuccin
-# run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
-run ~/.config/tmux/plugins/tmux/catppuccin.tmux
-run ~/.config/tmux/plugins/tmux-cpu/cpu.tmux
-run ~/.config/tmux/plugins/tmux-battery/battery.tmux
-run ~/.config/tmux/plugins/tmux-weather/tmux-weather.tmux
+# Load plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux#v2.1.0' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'xamut/tmux-weather'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
