fix window numbering

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,9 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# when a window gets closed, renumber
+set -g renumber-windows on
+
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
