update date format

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,7 +63,7 @@ set -g @tmux-weather-units "u"
 # set -g @tmux-weather-interval 1
 
 # Status modules config
-set -g @catppuccin_date_time_text " %d-%m %H:%M"
+set -g @catppuccin_date_time_text " %m-%d %H:%M"
 
 # rename windows in ctrl+b w view
 set-option -g status-interval 5
