--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,6 @@ set -g default-terminal "tmux-256color"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-
 # decide whether we're in a Vim process
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -13,6 +12,7 @@ bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+# END Smart pane switching
 
 # open panes and windows in the same directory
 bind '"' split-window -c "#{pane_current_path}"
@@ -44,7 +44,6 @@ bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 run ~/.config/tmux/plugins/tmux/catppuccin.tmux
 
 # catppuccin setup
-# Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 
 set -g @catppuccin_window_status_style "rounded" # basic, rounded, slanted, custom, or none
@@ -54,15 +53,16 @@ set -g @catppuccin_window_text " #{b:pane_current_path}"
 set -g @catppuccin_window_number "#I"
 set -g @catppuccin_window_current_text_color "#{@thm_surface_1}"
 set -g @catppuccin_window_current_number_color "#{@thm_mauve}"
-set -g @catppuccin_window_current_text " #{pane_current_path}"
+set -g @catppuccin_window_current_text " #{pane_current_path}#F"
 set -g @catppuccin_window_current_number "#I"
 set -g @catppuccin_window_number_position "left"
 
+# setup weather
 set -g @tmux-weather-location "Hillsboro" # can use zipcode here
 set -g @tmux-weather-units "u"
 # set -g @tmux-weather-interval 1
 
-# Status modules config
+# setup date time format
 set -g @catppuccin_date_time_text " %m-%d %H:%M"
 
 # rename windows in ctrl+b w view
@@ -93,12 +93,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'xamut/tmux-weather'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 if "test ! -d ~/.config/tmux/plugins/tpm" \
