--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # enable mouse support
 setw -g mouse on
 set -g default-terminal "tmux-256color"
+set-option -a terminal-overrides ",*256col*:RGB"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -57,6 +58,8 @@ set -g @catppuccin_window_current_text " #{pane_current_path}#F"
 set -g @catppuccin_window_current_number "#I"
 set -g @catppuccin_window_number_position "left"
 
+set -g @catppuccin_pane_color "#{@thm_purple}"
+
 # setup weather
 set -g @tmux-weather-location "Hillsboro" # can use zipcode here
 set -g @tmux-weather-units "u"
@@ -72,6 +75,9 @@ set-option -g automatic-rename-format "#{b:pane_current_path}"
 
 # vi keys for searching scrollback with '?' '/' etc
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # start window numbers from 1
 set -g base-index 1
