--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,10 @@
 # enable mouse support
 setw -g mouse on
 set -g default-terminal "tmux-256color"
-set-option -a terminal-overrides ",*256col*:RGB"
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+# set-option -a terminal-overrides ",*256col*:RGB"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
